recursion.lessons.recursion.polygonfractal.PolygonFractal.scala.error
PolygonFractal:9: error: '<-' expected but $XMLSTART$< found.
			for (j <i 1 to sides) {
                               ^PolygonFractal:18: error: illegal start of simple expression
}
^